--- a/style.css
+++ b/style.css
@@ -4,8 +4,12 @@ body {
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
+  flex-direction: column;
 }
 
+p {
+  font-size: 2em;
+}
 .main {
   width: 300px;
   height: 300px;
