--- a/style.css
+++ b/style.css
@@ -60,21 +60,24 @@ p {
 }
 
 @media only screen and (max-width: 600px) {
+  .main {
+    margin-bottom: 25%;
+  }
   .winner {
     position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    font-size: 3rem;
+    font-size: 2.3rem;
     visibility: hidden;
-    margin-bottom: 20%;
+    margin-bottom: 25%;
   }
 
   .restartButton {
     position: absolute;
     visibility: hidden;
-    margin-top: 15%;
+    margin-top: 10%;
     background: black;
     padding: 2%;
     border-radius: 5px;
